--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "devDependencies": {
     "apache-server-configs": "2.11.0",
     "archiver": "^0.13.0",
+    "autoprefixer": "^7.1.4",
+    "browser-sync": "^2.18.13",
+    "cssnano": "^3.10.0",
     "del": "^1.2.1",
     "eslint-config-standard": "^10.2.1",
     "eslint-plugin-import": "^2.7.0",
@@ -10,29 +13,26 @@
     "eslint-plugin-standard": "^3.0.1",
     "glob": "^4.5.3",
     "gulp": "^3.9.1",
-    "gulp-header": "^1.2.2",
-    "gulp-load-plugins": "^0.8.1",
-    "gulp-rename": "^1.2.0",
-    "gulp-replace": "^0.5.0",
-    "gulp-requirejs": "^1.0.0",
-    "map-stream": "0.0.7",
-    "run-sequence": "^1.2.2",
-    "autoprefixer": "^7.1.4",
-    "browser-sync": "^2.18.13",
-    "cssnano": "^3.10.0",
     "gulp-cache": "^0.4.6",
     "gulp-eslint": "^4.0.0",
+    "gulp-header": "^1.2.2",
     "gulp-html-replace": "^1.6.2",
     "gulp-htmlmin": "^3.0.0",
     "gulp-if": "^2.0.2",
     "gulp-imagemin": "^3.3.0",
+    "gulp-load-plugins": "^0.8.1",
     "gulp-md5": "^0.1.2",
     "gulp-newer": "^1.3.0",
     "gulp-postcss": "^7.0.0",
+    "gulp-rename": "^1.2.0",
+    "gulp-replace": "^0.5.0",
+    "gulp-requirejs": "^1.0.0",
     "gulp-sass": "^3.1.0",
     "gulp-size": "^2.1.0",
     "gulp-sourcemaps": "^2.6.1",
-    "requirejs": "^2.3.5"
+    "map-stream": "0.0.7",
+    "requirejs": "^2.3.5",
+    "run-sequence": "^1.2.2"
   },
   "engines": {
     "node": ">=0.10.0"
