--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "browser-sync": "^2.18.13",
     "cssnano": "^3.10.0",
     "del": "^1.2.1",
+    "eslint": "^4.9.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-node": "^5.2.0",
@@ -30,6 +31,7 @@
     "gulp-sass": "^3.1.0",
     "gulp-size": "^2.1.0",
     "gulp-sourcemaps": "^2.6.1",
+    "http-proxy-middleware": "^0.17.4",
     "map-stream": "0.0.7",
     "requirejs": "^2.3.5",
     "run-sequence": "^1.2.2"
